# gokart-autoware.universe

gokart/: README.md
gokart/Perception/classic_grass_detection/: CMakeLists.txt  README.md  package.xml
gokart/Perception/classic_grass_detection/config/: classic_grass_detection.param.yaml  classic_grass_detection_real.param.yaml  classic_grass_detection_sim.param.yaml  classic_grass_detection_sim_okad.param.yaml
gokart/Perception/classic_grass_detection/images/: script.py
gokart/Perception/classic_grass_detection/include/classic_grass_detection/: classic_grass_detection_node.hpp
gokart/Perception/classic_grass_detection/launch/: classic_grass_detection.launch.xml  classic_grass_detection_real.launch.xml  classic_grass_detection_sim.launch.xml
gokart/Perception/classic_grass_detection/src/classic_grass_detection_node/: classic_grass_detection_node.cpp
gokart/Planning/kart_pure_pursuit/: package.xml  setup.cfg  setup.py
gokart/Planning/smart_gap_follow/: CMakeLists.txt  README.md  package.xml
gokart/Planning/smart_gap_follow/config/: smart_gap_follow_real.yaml  smart_gap_follow_sim.yaml
gokart/Planning/smart_gap_follow/include/smart_gap_follow/: [old]smart_gap_follow.hpp  smart_gap_follow_node.hpp
gokart/Planning/smart_gap_follow/launch/: smart_gap_follow_real.launch.xml  smart_gap_follow_sim.launch.xml
gokart/Planning/smart_gap_follow/src/: smart_gap_follow.cpp
gokart/Planning/smart_gap_follow/src/smart_gap_follow_node/: [old]smart_gap_follow.cpp  smart_gap_follow_node.cpp
gokart/Planning/trajectory_follower_gokart/: CMakeLists.txt  package.xml
gokart/configs/: global_config.yaml  gokart_online_async_sim.yaml  rviz.rviz
gokart/configs/pennovation/: gnss_waypoints_collection.yaml  map_ori.csv  wp.csv  (+3 more)
gokart/launch_autoware_gokart/: package.xml  setup.cfg  setup.py
gokart/scripts/: edit_wp.py  gerenate_yaml.py  visualize_centerline.py
latest/: 404.html  index.html  sitemap.xml
latest/CODE_OF_CONDUCT/: index.html
latest/CONTRIBUTING/: index.html
latest/DISCLAIMER/: index.html
latest/common/: index.html
latest/gokart/: index.html
latest/planning/: index.html
latest/search/: search_index.json
main/: 404.html  index.html  sitemap.xml
main/CODE_OF_CONDUCT/: index.html
main/CONTRIBUTING/: index.html
main/DISCLAIMER/: index.html
main/common/: index.html
main/gokart/: index.html
main/planning/: index.html
main/search/: search_index.json
(+766 files in other folders)
